fix hide service menu items in context menu

BUG: 482216